# module-info

./: .editorconfig  .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.txt  NOTICE  README.md  SUPPORT.md  deny.toml  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: ci.yml  codeql.yml  policheck.yml  release.yml
examples/: .gitignore
examples/_test_support/: note_section.rs
examples/sample_builder_api/: Cargo.toml  build.rs
examples/sample_builder_api/src/: main.rs
examples/sample_crashing_process/: Cargo.toml  README.md  build.rs
examples/sample_crashing_process/src/: main.rs
examples/sample_elf_bin/: Cargo.toml  build.rs
examples/sample_elf_bin/src/: main.rs
examples/sample_elf_bin/tests/: note_section.rs
examples/sample_elf_bin_with_lib/: Cargo.toml
examples/sample_elf_bin_with_lib/src/: main.rs
examples/sample_elf_bin_with_lib/tests/: dlopen_self_read.rs
examples/sample_info_api/: Cargo.toml  build.rs
examples/sample_info_api/src/: main.rs
examples/sample_lib/: Cargo.toml
examples/sample_lib/src/: lib.rs
examples/sample_lib/tests/: note_section.rs
src/: constants.rs  error.rs  fields.rs  lib.rs  macros.rs  metadata.rs  note_section.rs  utils.rs
