[package]
name = "sample_crashing_process"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Team Name <example@contoso.com>"]
description = "A Linux-specific example program that demonstrates module_info usage and generates various types of crashes"

[package.metadata.module_info]
maintainer = "example@contoso.com"
type = "tool"
copyright = "Contoso, Ltd."
# Embed the CI-provided build number when one is available; see README "CI Integration".
version_env_var_name = "BUILD_BUILDNUMBER"
module_version_env_var_name = "BUILD_BUILDNUMBER"

[[bin]]
name = "sample_crashing_process"
path = "src/main.rs"

[dependencies]
module-info = { version = "0.5.0", features = ["embed-module-info"] }
# Pin the nix minor (`^0.31`) instead of using a wildcard `0`. nix bumps
# its MSRV freely across 0.x releases; locking to a known-MSRV-safe minor
# keeps this example buildable on the workspace's pinned 1.74.0.
nix = { version = "0.31", features = ["signal"] }

[build-dependencies]
module-info = "0.5.0"

# Standalone Cargo package; detach from the outer workspace so it builds via
# `cargo build --manifest-path <this>` like an external consumer would.
[workspace]
