[package]
name = "sample_elf_bin_with_lib"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.module_info]
maintainer = "example@contoso.com"
type = "executable"
copyright = "Contoso, Ltd."

# Embed the CI-supplied build number when one is available; see the README
# "CI Integration" section for how `BUILD_BUILDNUMBER` is normalized.
version_env_var_name = "BUILD_BUILDNUMBER"
module_version_env_var_name = "BUILD_BUILDNUMBER"

[[bin]]
name = "sample_elf_bin_with_lib"
path = "src/main.rs"

[dependencies]
libloading = "0.8"
module-info = { path = "../..", features = ["embed-module-info"] }

[build-dependencies]
module-info = { path = "../.." }

# Standalone Cargo package; detach from the outer workspace so it builds via
# `cargo build --manifest-path <this>` like an external consumer would.
[workspace]
